# GetYourBrainTogether

./: .gitignore  README.md  _config.yml  requirements.txt
.github/ISSUE_TEMPLATE/: schedule-a-tutorial.md  schedule-a-tutorial.yml
HCK01_2022_Irvine/: README.md
HCK01_2022_Virtual/: README.md
HCK01_2022_Virtual/BoFBreakouts/: ANTs_BoF_Notes.md  ITKElastix_BoF_Notes.md  OME-NGFF_BoF_Notes.md  README.md  Registration_Standards_BoF_Notes.md
HCK01_2022_Virtual/ReproducibleResource/: README.md
HCK01_2022_Virtual/ReproducibleResource/IanaVasylieva/: README.md
HCK01_2022_Virtual/ReproducibleResource/Template/: README.md
HCK01_2022_Virtual/Tutorials/: ITKElastixTutorial.md  MMOptimizationAlgorithm.md  MappingLightSheet.md  MappingMicroToMacroScaleAnatomyWithLDDMM.md  MetadataPreservation.md  README.md  YourTransformObjectNeedsMetadata.md
HCK01_2022_Virtual/Tutorials/GetYourBrainPipelined/: Containers.md  README.md
HCK01_2022_Virtual/Tutorials/MappingLightSheetData/: AboutTheDatasets.md  MappingLightSheet.md
HCK01_2022_Virtual/Tutorials/MetadataPreservation/: ITK_image_grid.ipynb  LPS-RAS-4x4.ipynb  MetadataPreservation.md  Orient_filter.ipynb
HCK01_2022_Virtual/Tutorials/MetadataPreservation/AccessSpatialMetadata/: CMakeLists.txt  Code.cxx  Code.py
HCK01_2022_Virtual/Tutorials/MetadataPreservation/ResampleAScalarImage/: CMakeLists.txt
HCK01_2022_Virtual/Tutorials/Template/: README.md
HCK02_2023_Allen_Institute_Hybrid/: README.md
HCK02_2023_Allen_Institute_Hybrid/BoFBreakouts/: Anatomic_orientation_in_OME-Zarr_NGFF_BoF_notes.md  README.md
HCK02_2023_Allen_Institute_Hybrid/Tutorials/: AboutTheAINDLightsheetChallengeDataset.md  ITKElastixWithMONAI.md  README.md  RegistrationQualityMetrics.md  WorkingInCodeOcean.md
HCK03_2024_UNC_Hybrid/: README.md
_includes/: head_custom.html
common/: Calendar.md
(+49 files in other folders)
